--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://kit.fontawesome.com/8a206a71da.js"
+    <script
+      src="https://kit.fontawesome.com/8a206a71da.js"
       crossorigin="anonymous"
-    />
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Knowledge Timeline</title>
   </head>
