--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <header id="main-header">
       <div class="container">
-        <h1><i class="fas fa-brain"></i>Он цагийн хэлхээс</h1>
-        <h3><i class="fas fa-user"></i>E.Lorem</h3>
+        <h1><i class="fas fa-brain"></i> Он цагийн хэлхээс</h1>
+        <h3><i class="fas fa-user"></i> Г. Ариунбуян</h3>
       </div>
     </header>
 
