--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2007: HTML & CSS</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
@@ -31,41 +37,97 @@
             <h3>
               <i class="fas fa-chevron-right"></i> 2008: JavaScript & JQuery
             </h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2009: PHP & Wordpress</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2011: Ruby & Rails</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2012: Python</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2013: NodeJS & React</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2015: Angular & React</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2017: GraphQI & Apollo</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
         <li>
           <div>
             <h3><i class="fas fa-chevron-right"></i> 2019: Angular & React</h3>
+
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
+              iusto cumque minima quod. Est deserunt dolore eos nisi cupiditate
+              tempore asperiores, reprehenderit optio molestias neque,
+              necessitatibus, alias voluptate maxime laboriosam?
+            </p>
           </div>
         </li>
       </ul>
